# Trading-System

./: .flake8  .gitignore  .isort.cfg  ARCHITECTURE.md  CHANGELOG.md  MIGRATION_GUIDE.md  Readme.md  main.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_institutional_holders.py
.claude/: launch.json
.cursor/rules/: lines.mdc
.github/workflows/: cd.yml  ci.yml  docs.yml  security-test.yml  security.yml  sphinx-docs.yml
config/: logging.yaml  strategies.yaml
deployment/: env.example
docs/: CHANGELOG.md  CI_CD_PIPELINE.md  CI_CD_TROUBLESHOOTING.md  COMPREHENSIVE_ARCHITECTURE.md  DATABASE_ARCHITECTURE_DETAILED.md  DATABASE_SETUP.md  GITHUB_PAGES_SETUP.md  LOGGING_ARCHITECTURE.md  PERFORMANCE.md  SECURITY.md  TESTING_STRATEGY.md  getting-started.md  index.md  streamlit-ui-utilities.md  troubleshooting.md
docs/api/: analytics.md  data-ingestion-alpaca.md  data-ingestion-yahoo.md  data-ingestion.md  execution.md  index.md  risk-management.md  strategy-engine.md
docs/data-ingestion/: data-sources-comparison.md  data-sources-implementation.md  data-sources-overview.md  data-sources-polygon.md  data-sources-yahoo.md  data-sources.md  historical-data-loader.md  yahoo-finance-attributes.md
docs/development/: architecture-database.md  architecture-overview.md  architecture-prefect.md  architecture-services.md  architecture-ui.md  architecture.md  database-optimization.md  database-overview.md  database-schema.md  database-setup.md  database.md  index.md  logging.md  prefect-deployment-advanced.md  prefect-deployment-code-patterns.md  prefect-deployment-configuration.md  prefect-deployment-guide.md  prefect-deployment-operations.md  prefect-deployment-overview.md  prefect-deployment-plan.md  prefect-deployment-workflow.md  prefect-phase1-plan.md  stock-screener-architecture.md  testing.md
docs/getting-started/: configuration.md  first-run.md  installation.md
docs/sphinx/: conf.py  index.rst  requirements.txt
docs/troubleshooting/: common-issues.md  faq.md
docs/user-guide/: dashboard.md  risk-management.md  stock-screener.md  strategies.md  trading.md
examples/: database_usage.py  historical_data_loader_usage.py  load_key_statistics.py  timezone_usage.py  yahoo_load_specific_attributes.py  yahoo_loader_usage.py  yahoo_officers_loader_usage.py
models/: lstm_mu_model.pth
notebooks/: lstm_price_prediction.ipynb  lstm_price_prediction_v2.ipynb  lstm_price_prediction_v3.ipynb  test.ipynb
scripts/: 01_create_databases.sql  02_create_core_tables.sql  03_create_indexes.sql  backpopulate_yahoo_adjusted.py  backup_trading_db.py  check_docs_links.py  create_placeholder_docs.py  deploy_docs.py  discover_pairs.py  discover_pairs_backup.py  fix_all_documentation_links.py  fix_documentation_links.py  fix_github_pages.py  fix_github_pages_deployment.py  load_historical_data.py  load_yahoo_data.py  populate_delisted_table.py  populate_technical_indicators.py  run.py  run_tests.py  setup_databases.py  test_ci_workflow.py  test_database_connections.py  test_docs_workflow.py  test_github_actions.py  test_ollama.py  test_prefect.py  test_security_tools.py  test_security_workflow.py  test_session_management.py  trigger_docs_deployment.py  validate_workflows.py
src/config/: __init__.py  database.py  settings.py
src/shared/: market_data.py
src/web/: main.py
streamlit_ui/: README.md  api_client.py  css_config.py  run_streamlit.py  streamlit_app.py  styles.css  utils.py
streamlit_ui/pages/: 1_Portfolio.py  2_Analysis.py  3_Screener.py  4_Pairs_Trading.py  4_Strategy_Monitor.py  5_Backtest_Review.py  5_PnL_Report.py  6_Pair_Lab.py  6_Pair_Scanner.py  6_Settings.py  7_About.py  (+9 more)
tests/: conftest.py
tools/: .gitignore  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
(+134 files in other folders)
